unpackaged/main/default/objects/Account/fields/Academy__c.field-meta.xml
<CustomField>
    <fullName>Academy__c</fullName>
    <label>Academy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academy of Polynésie française</fullName>
            </value>
            <value>
                <fullName>Academy of Aix-Marseille</fullName>
            </value>
            <value>
                <fullName>Academy of Amiens</fullName>
            </value>
            <value>
                <fullName>Academy of Orléans-Tours</fullName>
            </value>
            <value>
                <fullName>Academy of Besançon</fullName>
            </value>
            <value>
                <fullName>Academy of Bordeaux</fullName>
            </value>
            <value>
                <fullName>Academy of Caen</fullName>
            </value>
            <value>
                <fullName>Academy of Clermont-Ferrand</fullName>
            </value>
            <value>
                <fullName>Academy of Corse</fullName>
            </value>
            <value>
                <fullName>Academy of Créteil</fullName>
            </value>
            <value>
                <fullName>Academy of Dijon</fullName>
            </value>
            <value>
                <fullName>Academy of Grenoble</fullName>
            </value>
            <value>
                <fullName>Academy of Guadeloupe</fullName>
            </value>
            <value>
                <fullName>Academy of Guyane</fullName>
            </value>
            <value>
                <fullName>Academy of Lille</fullName>
            </value>
            <value>
                <fullName>Academy of Limoges</fullName>
            </value>
            <value>
                <fullName>Academy of Lyon</fullName>
            </value>
            <value>
                <fullName>Academy of Martinique</fullName>
            </value>
            <value>
                <fullName>Academy of Mayotte</fullName>
            </value>
            <value>
                <fullName>Academy of Montpellier</fullName>
            </value>
            <value>
                <fullName>Academy of Nancy-Metz</fullName>
            </value>
            <value>
                <fullName>Academy of Nantes</fullName>
            </value>
            <value>
                <fullName>Academy of Nice</fullName>
            </value>
            <value>
                <fullName>Academy of Nouvelle-Calédonie</fullName>
            </value>
            <value>
                <fullName>Academy of Paris</fullName>
            </value>
            <value>
                <fullName>Academy of Poitiers</fullName>
            </value>
            <value>
                <fullName>Academy of Reims</fullName>
            </value>
            <value>
                <fullName>Academy of Rennes</fullName>
            </value>
            <value>
                <fullName>Academy of Rouen</fullName>
            </value>
            <value>
                <fullName>Academy of Strasbourg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>