unpackaged/main/default/objects/Account/fields/Account_in_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Account_in_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account in Dispute</label>
    <type>Checkbox</type>
</CustomField>