unpackaged/main/default/objects/Account/fields/Account_in_Dispute_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_in_Dispute_Status__c</fullName>
    <formula>IF( Account_in_Dispute__c , IMAGE("/servlet/servlet.FileDownload?file=" &amp; $Label.IMG_Red,"Red",20,20),"")</formula>
    <label>Account in Dispute Status</label>
    <type>Text</type>
</CustomField>