unpackaged/main/default/objects/Account/fields/Account_Origin__c.field-meta.xml
<CustomField>
    <fullName>Account_Origin__c</fullName>
    <label>Account Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>