unpackaged/main/default/objects/Account/fields/Account_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Quality_Score__c</fullName>
    <formula>IF( OR(ISBLANK(BillingStreet),
							ISBLANK(BillingCity),
							ISBLANK(BillingPostalCode), 
							ISBLANK(Industry_Code_Text__c), 
							ISBLANK(Phone),
							AND(ISBLANK(TECH_NumberOfEmployees__c), ISBLANK(TECH_AnnualRevenue__c)),
							AND(ISBLANK(National_ID__c), ISBLANK(IntercommunityVATnumber__c)),
			    Tech_Nb_Contact__c &lt; 1),
			0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>