unpackaged/main/default/objects/Account/fields/Active_Chorus__c.field-meta.xml
<CustomField>
    <fullName>Active_Chorus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Chorus</label>
    <type>Checkbox</type>
</CustomField>