unpackaged/main/default/objects/Account/fields/Administrative_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Compliance__c</fullName>
    <formula>TECH_Administrative_Compliance__c</formula>
    <label>Administrative Compliance</label>
    <type>Checkbox</type>
</CustomField>