unpackaged/main/default/objects/Account/fields/Advanced_portal_customization__c.field-meta.xml
<CustomField>
    <fullName>Advanced_portal_customization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced portal customization</label>
    <type>Checkbox</type>
</CustomField>