unpackaged/main/default/objects/Account/fields/Amount_of_delay_0_1_month__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_delay_0_1_month__c</fullName>
    <label>Amount of delay 0-1 month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>