unpackaged/main/default/objects/Account/fields/Amount_of_delay_120_days__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_delay_120_days__c</fullName>
    <formula>Amount_of_delay_150_days__c + Amount_of_delay_121_150_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of delay &gt;120 days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>