unpackaged/main/default/objects/Account/fields/Amount_of_delay_12_24_months__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_delay_12_24_months__c</fullName>
    <label>Amount of delay 12-24 months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>