unpackaged/main/default/objects/Account/fields/Amount_of_delay_12_months__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_delay_12_months__c</fullName>
    <formula>Amount_of_delay_over_24_months__c + Amount_of_delay_12_24_months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of delay &gt; 12 months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>