unpackaged/main/default/objects/Account/fields/Amount_of_delay_1_month__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_delay_1_month__c</fullName>
    <formula>Amount_of_delay_3_months__c + Amount_of_delay_1_3_months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of delay &gt; 1 month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>