unpackaged/main/default/objects/Account/fields/Amount_of_delay_30_days__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_delay_30_days__c</fullName>
    <label>Amount of delay &lt; 30 days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>