unpackaged/main/default/objects/Account/fields/Amount_of_delay_over_24_months__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_delay_over_24_months__c</fullName>
    <label>Amount of delay over 24 months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>