unpackaged/main/default/objects/Account/fields/Annual_Revenue_Group__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Group__c</fullName>
    <description>Annual Revenue Group</description>
    <label>Annual Revenue Group</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>