unpackaged/main/default/objects/Account/fields/Appetence_For__c.field-meta.xml
<CustomField>
    <fullName>Appetence_For__c</fullName>
    <label>Appetence For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solution_Appetence</valueSetName>
    </valueSet>
</CustomField>