unpackaged/main/default/objects/Account/fields/Box_Program_For_All__c.field-meta.xml
<CustomField>
    <fullName>Box_Program_For_All__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Eligibility 30% discount if true</inlineHelpText>
    <label>Box Program For All</label>
    <type>Checkbox</type>
</CustomField>