unpackaged/main/default/objects/Account/fields/Box_Program_For_All_Activation_date__c.field-meta.xml
<CustomField>
    <fullName>Box_Program_For_All_Activation_date__c</fullName>
    <label>Box Program For All Activation date</label>
    <type>Date</type>
</CustomField>