unpackaged/main/default/objects/Account/fields/Business_project_and_objective_aligned__c.field-meta.xml
<CustomField>
    <fullName>Business_project_and_objective_aligned__c</fullName>
    <label>Business project and objective aligned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mood</valueSetName>
    </valueSet>
</CustomField>