unpackaged/main/default/objects/Account/fields/C_Score__c.field-meta.xml
<CustomField>
    <fullName>C_Score__c</fullName>
    <inlineHelpText>Cegid relative strength in this market segment based on overall market fit, penetration and growth (5=very strong)</inlineHelpText>
    <label>C-Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/5</fullName>
            </value>
            <value>
                <fullName>2/5</fullName>
            </value>
            <value>
                <fullName>3/5</fullName>
            </value>
            <value>
                <fullName>4/5</fullName>
            </value>
            <value>
                <fullName>5/5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>