unpackaged/main/default/objects/Account/fields/Cegid_Size_Group__c.field-meta.xml
<CustomField>
    <fullName>Cegid_Size_Group__c</fullName>
    <inlineHelpText>source : INSEE / D&amp;B. Might be different from the data available on the account</inlineHelpText>
    <label>Cegid Size Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - STR</fullName>
            </value>
            <value>
                <fullName>11 - VSB</fullName>
            </value>
            <value>
                <fullName>12 - SMB</fullName>
            </value>
            <value>
                <fullName>21 - LMM</fullName>
            </value>
            <value>
                <fullName>22 - UMM</fullName>
            </value>
            <value>
                <fullName>31 - LA</fullName>
            </value>
            <value>
                <fullName>32 - VLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>