unpackaged/main/default/objects/Account/fields/Cegid_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Cegid_Vertical__c</fullName>
    <inlineHelpText>source : INSEE / D&amp;B. Might be different from the data available on the account</inlineHelpText>
    <label>Cegid Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11 - Government</fullName>
            </value>
            <value>
                <fullName>12 - Education</fullName>
            </value>
            <value>
                <fullName>13 - Healthcare &amp; Social Services</fullName>
            </value>
            <value>
                <fullName>21 - Agriculture &amp; Natural Resources</fullName>
            </value>
            <value>
                <fullName>22 - Construction</fullName>
            </value>
            <value>
                <fullName>23 - Manufacturing</fullName>
            </value>
            <value>
                <fullName>24 - Process Manufacturing</fullName>
            </value>
            <value>
                <fullName>31 - Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>32 - Specialty Retail</fullName>
            </value>
            <value>
                <fullName>33 - Other Retail</fullName>
            </value>
            <value>
                <fullName>41 - CPA</fullName>
            </value>
            <value>
                <fullName>42 - Financial Services (except CPA)</fullName>
            </value>
            <value>
                <fullName>43 - Business Services</fullName>
            </value>
            <value>
                <fullName>44 - Consumer Services</fullName>
            </value>
            <value>
                <fullName>45 - Telecommunications</fullName>
            </value>
            <value>
                <fullName>51 - Transportation</fullName>
            </value>
            <value>
                <fullName>52 - Energy &amp; Public Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>