unpackaged/main/default/objects/Account/fields/CodeFollowedBy__c.field-meta.xml
<CustomField>
    <fullName>CodeFollowedBy__c</fullName>
    <label>Code Followed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>