unpackaged/main/default/objects/Account/fields/Collaborative_Portal__c.field-meta.xml
<CustomField>
    <fullName>Collaborative_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collaborative Portal</label>
    <type>Checkbox</type>
</CustomField>