unpackaged/main/default/objects/Account/fields/Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Status__c</fullName>
    <description>Collection status of the Account. This field is automatically populated with information coming from outside SF.</description>
    <label>Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>