unpackaged/main/default/objects/Account/fields/Consolidated_Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Sales_Revenue__c</fullName>
    <label>Consolidated Sales Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>