unpackaged/main/default/objects/Account/fields/Country_Scope__c.field-meta.xml
<CustomField>
    <fullName>Country_Scope__c</fullName>
    <label>Country Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALGERIA</fullName>
            </value>
            <value>
                <fullName>ANDORRA</fullName>
            </value>
            <value>
                <fullName>ARGENTINA</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>BAHRAIN</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>BOSNIA</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CHILE</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>COSTA RICA</fullName>
            </value>
            <value>
                <fullName>CURAZAO</fullName>
            </value>
            <value>
                <fullName>CZECH REPUBLIC</fullName>
            </value>
            <value>
                <fullName>DENMARK</fullName>
            </value>
            <value>
                <fullName>DOMINICAN REPUBLIC</fullName>
            </value>
            <value>
                <fullName>ECUADOR</fullName>
            </value>
            <value>
                <fullName>EGYPT</fullName>
            </value>
            <value>
                <fullName>FINLAND</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>GREECE</fullName>
            </value>
            <value>
                <fullName>GUATEMALA</fullName>
            </value>
            <value>
                <fullName>HONG KONG</fullName>
            </value>
            <value>
                <fullName>HUNGARY</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>INDONESIA</fullName>
            </value>
            <value>
                <fullName>IRELAND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>