unpackaged/main/default/objects/Account/fields/CPA_Number_of_users__c.field-meta.xml
<CustomField>
    <fullName>CPA_Number_of_users__c</fullName>
    <label>Number of users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>