unpackaged/main/default/objects/Account/fields/CPA_Sector__c.field-meta.xml
<CustomField>
    <fullName>CPA_Sector__c</fullName>
    <inlineHelpText>Choose other sector for consulting companies, lawyers and legal activities</inlineHelpText>
    <label>CPA Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGC</fullName>
            </value>
            <value>
                <fullName>Certified Public Accountant</fullName>
            </value>
            <value>
                <fullName>Instance</fullName>
            </value>
            <value>
                <fullName>OGA</fullName>
            </value>
            <value>
                <fullName>Other CPA Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>