unpackaged/main/default/objects/Account/fields/Customer_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_External_ID__c</fullName>
    <label>Customer External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>