unpackaged/main/default/objects/Account/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>ID Of the Customer</description>
    <label>Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>