unpackaged/main/default/objects/Account/fields/Customer_Of__c.field-meta.xml
<CustomField>
    <fullName>Customer_Of__c</fullName>
    <label>Customer Of</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CYLANDE</fullName>
            </value>
            <value>
                <fullName>OPTITAXES</fullName>
            </value>
            <value>
                <fullName>QUALIAC</fullName>
            </value>
            <value>
                <fullName>META4</fullName>
            </value>
            <value>
                <fullName>LOOP</fullName>
            </value>
            <value>
                <fullName>DIESE</fullName>
            </value>
            <value>
                <fullName>GERER MA BOITE</fullName>
            </value>
            <value>
                <fullName>DHATIM</fullName>
            </value>
            <value>
                <fullName>CEDRICOM</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>KOALABOOX</fullName>
            </value>
            <value>
                <fullName>TALENTSOFT</fullName>
            </value>
            <value>
                <fullName>RD LIBERAL</fullName>
            </value>
            <value>
                <fullName>VISUALTIME</fullName>
            </value>
            <value>
                <fullName>WITTYFIT</fullName>
            </value>
            <value>
                <fullName>NOTILUS</fullName>
            </value>
            <value>
                <fullName>STORIQ</fullName>
            </value>
            <value>
                <fullName>DIGITAL RECRUITERS</fullName>
                <label>DigitalRecruiters</label>
            </value>
            <value>
                <fullName>GRUPO PRIMAVERA</fullName>
            </value>
            <value>
                <fullName>DIEZ</fullName>
            </value>
            <value>
                <fullName>PROSOFT</fullName>
            </value>
            <value>
                <fullName>PROFITURE</fullName>
            </value>
            <value>
                <fullName>GSE</fullName>
            </value>
            <value>
                <fullName>CLUB DEL ASESOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>