unpackaged/main/default/objects/Account/fields/Customer_since__c.field-meta.xml
<CustomField>
    <fullName>Customer_since__c</fullName>
    <label>Customer since</label>
    <summarizedField>Account_Expertise__c.Contract_Start_Date__c</summarizedField>
    <summaryForeignKey>Account_Expertise__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>