unpackaged/main/default/objects/Account/fields/Date_of_litigation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_litigation__c</fullName>
    <label>Date of litigation</label>
    <type>Date</type>
</CustomField>