unpackaged/main/default/objects/Account/fields/Decision_center__c.field-meta.xml
<CustomField>
    <fullName>Decision_center__c</fullName>
    <label>Decision center</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expertise</valueSetName>
    </valueSet>
</CustomField>