unpackaged/main/default/objects/Account/fields/DGE_Group__c.field-meta.xml
<CustomField>
    <fullName>DGE_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DGE Group</label>
    <type>Checkbox</type>
</CustomField>