unpackaged/main/default/objects/Account/fields/DUNS_number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_number__c</fullName>
    <label>DUNS number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>