unpackaged/main/default/objects/Account/fields/Email_e_Billing__c.field-meta.xml
<CustomField>
    <fullName>Email_e_Billing__c</fullName>
    <label>Email e-Billing</label>
    <type>Email</type>
</CustomField>