unpackaged/main/default/objects/Account/fields/Employees_Group__c.field-meta.xml
<CustomField>
    <fullName>Employees_Group__c</fullName>
    <description>Number of Employees of the Group (Accounts)</description>
    <label>No. of Employees (Group)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>