unpackaged/main/default/objects/Account/fields/ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>To obtain the 'ERP Number, the following fields must be filled in :
- Account Name
- Account Type
- National ID (Siret for accounts in France)
- Industry code
- Billing Address
- Phone
- Annual Revenue
- No. of Employees</inlineHelpText>
    <label>ERP Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>