unpackaged/main/default/objects/Account/fields/Executive_Sponsorship_Program__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsorship_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Sponsorship Program</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>