unpackaged/main/default/objects/Account/fields/Field_testcco__c.field-meta.xml
<CustomField>
    <fullName>Field_testcco__c</fullName>
    <label>Field_testcco</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>