unpackaged/main/default/objects/Account/fields/General_Status__c.field-meta.xml
<CustomField>
    <fullName>General_Status__c</fullName>
    <label>General Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mood</valueSetName>
    </valueSet>
</CustomField>