unpackaged/main/default/objects/Account/fields/Geode_Link__c.field-meta.xml
<CustomField>
    <fullName>Geode_Link__c</fullName>
    <description>geode link - Tests GLI</description>
    <formula>HYPERLINK($Label.GeodeURL &amp; "?func=cegid.searchtiers&amp;codetiers=" &amp; ERP_Number__c ,"Click to Geode access")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geode Link</label>
    <type>Text</type>
</CustomField>