unpackaged/main/default/objects/Account/fields/Harmony_Compta__c.field-meta.xml
<CustomField>
    <fullName>Harmony_Compta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Harmony Compta</label>
    <type>Checkbox</type>
</CustomField>