unpackaged/main/default/objects/Account/fields/Harmony_Program__c.field-meta.xml
<CustomField>
    <fullName>Harmony_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Harmony Program</label>
    <type>Checkbox</type>
</CustomField>